--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
 const container = document.getElementById('viewer');
 const scene = new THREE.Scene();
 const camera = new THREE.PerspectiveCamera(75, container.clientWidth / container.clientHeight, 0.1, 1000);
-camera.position.set(0, 0, 100);
+camera.position.set(0, 50, 100);
 
 const renderer = new THREE.WebGLRenderer({ antialias: true });
 renderer.setSize(container.clientWidth, container.clientHeight);
@@ -95,8 +95,8 @@ controls.zoomSpeed = 0.5;
 scene.add(new THREE.AmbientLight(0xF8F8F8));
 const directionalLight1 = new THREE.DirectionalLight(0xffffff, 1);
 const directionalLight2 = new THREE.DirectionalLight(0xffffff, 1);
-directionalLight1.position.set(0, 0, 100).normalize();
-directionalLight2.position.set(0, 0, 100).normalize();
+directionalLight1.position.set(0, 50, 100).normalize();
+directionalLight2.position.set(0, -50, 100).normalize();
 scene.add(directionalLight1);
 scene.add(directionalLight2);
 
@@ -107,7 +107,7 @@ function loadSTL(relativePath) {
   const stlUrl = `/stls/${relativePath}`;
   loader.load(stlUrl, geometry => {
     // reset the camera so the next object is properly centred on loading
-    camera.position.set(0, 0, 100);
+    camera.position.set(0, 100, 100);
     camera.up.set(0, 1, 0);
     camera.lookAt(0, 0, 0);
     controls.target.set(0, 0, 0);
@@ -127,7 +127,7 @@ function loadSTL(relativePath) {
     const size = new THREE.Vector3();
     geometry.boundingBox.getSize(size);
     const maxDim = Math.max(size.x, size.y, size.z);
-    camera.position.set(0, 0, maxDim * 2); 
+    camera.position.set(0, maxDim/3, maxDim ); 
     
     controls.update();
     renderer.render(scene, camera);
@@ -141,11 +141,11 @@ function animate() {
   const direction = new THREE.Vector3();
   camera.getWorldDirection(direction);
   direction.applyAxisAngle(new THREE.Vector3(0, 1, 0), THREE.MathUtils.degToRad(30));
-  directionalLight1.position.copy(camera.position.clone().add(direction.multiplyScalar(10)));
+  directionalLight1.position.copy(camera.position.clone().add(direction.multiplyScalar(25)));
 
   camera.getWorldDirection(direction);
   direction.applyAxisAngle(new THREE.Vector3(0, 1, 0), THREE.MathUtils.degToRad(-30));
-  directionalLight2.position.copy(camera.position.clone().add(direction.multiplyScalar(10)));
+  directionalLight2.position.copy(camera.position.clone().add(direction.multiplyScalar(25)));
 
   renderer.render(scene, camera);
 }
